feat(消息通知): 实现消息通知组件及功能优化
- 新增MessageNotification组件，集成未读消息计数和闪烁动画
- 重构BarUtil.vue使用新消息组件，移除旧实现
- 在sidebar.vue中添加消息通知入口
- 后端新增获取个人未读消息数量接口
- 优化消息标记已读逻辑，添加未读数量更新事件
- 改进系统消息发送功能，增加内容输入验证